@@ -12,7 +12,6 @@ parts =
   pyflakes
   zestreleaser
 versions = versions
-find-links = 3rdparty
 unzip = true
 
 [versions]
