@@ -1,2 +1,7 @@
 [bdist_wheel]
-universal = 1
+universal = 0
+
+[check-manifest]
+ignore =
+    fixtures/mydevpackage/build/lib/mydevpackage/__init__.py
+    fixtures/mydevpackage/build/lib/mydevpackage/resources/style.css
