@@ -1,5 +1,4 @@
 from setuptools import setup, Command
-import sys
 import io
 
 long_description = (
@@ -12,24 +11,6 @@ install_requires = [
     'setuptools',
     'shutilwhich',
 ]
-
-# We use tox to test fanstatic across python versions. We would like to
-# declare the python-version-based dependency on the "shutilwhich" package
-# like this:
-#
-# if sys.version_info < (3, 3):
-#     install_requires.append('shutilwhich')
-#
-# Unfortunately, we can't do this because of how tox works; if not listing
-# shutilwhich as a dependency, the py33 tests fail when filling the fanstatic
-# compiler and minifier registries.
-#
-# We choose to list shutilwhich as a dependency in order to be able to use
-# tox. This is not an ideal situation, but the shutilwhich code is harmless on
-# python3.3.
-
-if sys.version_info < (2, 7):
-    install_requires.append('argparse')
 
 tests_require = [
     'closure',
@@ -63,11 +44,11 @@ setup(
         'Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware',
         'Intended Audience :: Developers',
         'License :: OSI Approved :: BSD License',
-        'Programming Language :: Python :: 2.7',
         'Programming Language :: Python :: 3',
-        'Programming Language :: Python :: 3.5',
-        'Programming Language :: Python :: 3.6',
-        'Programming Language :: Python :: 3.7',
+        'Programming Language :: Python :: 3 :: Only',
+        'Programming Language :: Python :: 3.8',
+        'Programming Language :: Python :: 3.9',
+        'Programming Language :: Python :: 3.10',
         'Development Status :: 5 - Production/Stable'
     ],
     keywords='',
@@ -78,6 +59,7 @@ setup(
     url='http://fanstatic.org',
     packages=['fanstatic'],
     zip_safe=False,
+    python_requires='>=3.8, <4',
     install_requires=install_requires,
     tests_require=tests_require,
     extras_require={
