@@ -1,6 +1,8 @@
 [tox]
 envlist =
-  py38,
+  py38
+  py39
+  py310
 
 [testenv]
 deps =
@@ -12,3 +14,14 @@ commands =
   pip install mypackage -i file://{toxinidir}/fixtures/
   pip install {toxinidir}/fixtures/mydevpackage
   py.test {posargs:tests/}
+
+[testenv:lint]
+basepython = python3
+skip_install = true
+deps =
+    check-manifest
+    check-python-versions >= 0.19.1
+    wheel
+commands =
+    check-manifest
+    check-python-versions
